--- a/roguehacklab/static/styles/base.css
+++ b/roguehacklab/static/styles/base.css
@@ -1,5 +1,6 @@
 body {
   font-family: Verdana, Geneva, sans-serif;
+  line-height: 1.4em;
 }
 
 #header {
@@ -24,5 +25,6 @@ body {
 }
 
 #content {
+  width: 90%;
   padding: 10px;
 }
